# Secular

./: .codespellrc  .git-blame-ignore-revs  .gitignore  API-SETUP-SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYED.md  DEPLOYMENT.md  DOMAIN_SETUP.md  Dockerfile  FINAL_SUMMARY.md  INSTALL.md  Makefile  OPTIMIZATION_GUIDE.md  QUICKSTART-API.md  README-SECULAR.md  README.md  SAFE_SYNC_TEST.md  SECULAR_CLI_COMPLETE.md  SECULAR_GUI_SUMMARY.md  UPLOAD_REPOS.md  build.rs  convert-to-radicle.sh  docker-compose.yml  flake.nix  rad-id.1.adoc  rad-patch.1.adoc  rad.1.adoc  secular-clean-20251102-INSTALL.txt  test-sync.sh
.radicle/: ambient.yaml  (+1 more)
crates/radicle/: CHANGELOG.md  Cargo.toml
crates/radicle-cli/: Cargo.toml
crates/radicle-cli/examples/: jj-config.md  jj-init-bare.md  jj-init-colocate.md  rad-auth-errors.md  rad-clone-all.md  rad-clone-bare.md  rad-clone-connect.md  rad-clone-directory.md  rad-clone-partial-fail.md  rad-clone.md  rad-cob-log.md  rad-cob-operations.md  rad-cob-update.md  rad-config.md  rad-diff.md  rad-fetch.md  rad-help.md  rad-id-conflict.md  rad-id-multi-delegate.md  rad-id-private.md  rad-id-threshold.md  rad-id.md  rad-init-detached-head.md  rad-init-existing-bare.md  rad-init-existing.md  rad-init-no-git.md  rad-init-no-seed.md  rad-init-private-clone-seed.md  rad-init-private-clone.md  rad-init-private-seed.md  rad-init-private.md  rad-issue-list.md  rad-key-mismatch.md  rad-merge-after-update.md  rad-merge-no-ff.md  rad-merge-via-push.md  rad-node.md  rad-patch-ahead-behind.md  rad-patch-change-base.md  rad-patch-checkout-force.md  (+18 more)
crates/radicle-cli/examples/framework/: home.md
crates/radicle-cli/examples/git/: git-is-bare-repository.md  git-push-amend.md  git-push-canonical-annotated-tags.md  git-push-canonical-lightweight-tags.md  git-push-converge.md  git-push-diverge.md  git-push-rollback.md  git-push.md  git-tag.md
crates/radicle-cli/examples/workflow/: 4-patching-contributor.md  5-patching-maintainer.md  6-pulling-contributor.md
crates/radicle-cli/src/: commands.rs  git.rs  main.rs  node.rs  project.rs  terminal.rs  warning.rs
crates/radicle-cli/src/commands/: auth.rs  block.rs  checkout.rs  clean.rs  clone.rs  cob.rs  config.rs  debug.rs  diff.rs  follow.rs  fork.rs  id.rs  inbox.rs  init.rs  inspect.rs  issue.rs  ls.rs  node.rs  patch.rs  path.rs  publish.rs  remote.rs  seed.rs  self.rs  stats.rs  sync.rs  unblock.rs  unfollow.rs  unseed.rs  watch.rs
crates/radicle-cli/src/git/: ddiff.rs  pretty_diff.rs  unified_diff.rs
crates/radicle-cli/src/terminal/: args.rs  comment.rs  format.rs  io.rs  issue.rs  patch.rs
crates/radicle-cli/tests/: commands.rs
crates/radicle-cli/tests/util/: environment.rs  formula.rs
crates/radicle-cob/: Cargo.toml
crates/radicle-cob/src/: backend.rs  change.rs  change_graph.rs  history.rs  lib.rs  object.rs  signatures.rs  test.rs  tests.rs  trailers.rs  type_name.rs
crates/radicle-cob/src/backend/: git.rs
crates/radicle-cob/src/change/: store.rs
crates/radicle-cob/src/object/: collaboration.rs  storage.rs
crates/radicle-cob/src/signatures/: error.rs
crates/radicle-cob/src/test/: arbitrary.rs  identity.rs  storage.rs
crates/radicle-fetch/: Cargo.toml
crates/radicle-fetch/src/: git.rs  handle.rs  lib.rs  policy.rs  refs.rs  sigrefs.rs  stage.rs  state.rs  transport.rs
crates/radicle-fetch/src/git/: mem.rs  repository.rs
crates/radicle-fetch/src/transport/: fetch.rs  ls_refs.rs
crates/radicle-git-metadata/: Cargo.toml
crates/radicle-git-metadata/src/: author.rs  commit.rs  lib.rs
crates/radicle-git-metadata/src/commit/: headers.rs  trailers.rs
crates/radicle-git-ref-format/: Cargo.toml
crates/radicle-git-ref-format/src/: lib.rs
crates/radicle-node/: Cargo.toml
crates/radicle-node/src/: control.rs  fingerprint.rs  lib.rs  main.rs  reactor.rs  runtime.rs  test.rs  tests.rs  wire.rs  worker.rs
crates/radicle-node/src/reactor/: controller.rs  listener.rs  session.rs  timer.rs  token.rs  transport.rs
crates/radicle-node/src/runtime/: handle.rs
crates/radicle-node/src/test/: environment.rs  handle.rs  node.rs  peer.rs  simulator.rs
crates/radicle-node/src/tests/: e2e.rs
crates/radicle-node/src/worker/: channels.rs  fetch.rs
crates/radicle-oid/: Cargo.toml
crates/radicle-oid/src/: lib.rs
crates/radicle-protocol/: Cargo.toml
crates/radicle-protocol/src/: bounded.rs  deserializer.rs  lib.rs  service.rs  wire.rs  worker.rs
crates/radicle-protocol/src/service/: filter.rs  gossip.rs  io.rs  limiter.rs  message.rs  session.rs
crates/radicle-protocol/src/wire/: frame.rs  message.rs  varint.rs
crates/radicle-protocol/src/worker/: fetch.rs
crates/radicle-remote-helper/: Cargo.toml
crates/radicle-remote-helper/src/: fetch.rs  list.rs  main.rs  push.rs
crates/radicle-remote-helper/src/push/: canonical.rs  error.rs
crates/radicle-ssh/: Cargo.toml
crates/radicle-ssh/src/: encoding.rs
crates/radicle-ssh/src/agent/: client.rs
crates/radicle-systemd/: Cargo.toml
crates/radicle-systemd/src/: credential.rs  journal.rs  lib.rs  listen.rs
crates/radicle-term/: Cargo.toml
crates/radicle-term/src/: ansi.rs  args.rs  editor.rs  element.rs  io.rs  lib.rs  spinner.rs  table.rs  vstack.rs
crates/radicle-term/src/ansi/: paint.rs
crates/radicle/src/: cob.rs  explorer.rs  git.rs  identity.rs  io.rs  lib.rs  logger.rs  node.rs  profile.rs  rad.rs  schemars_ext.rs  storage.rs  test.rs  web.rs
crates/radicle/src/canonical/: formatter.rs
crates/radicle/src/cob/: cache.rs  common.rs  external.rs  identity.rs  issue.rs  op.rs  patch.rs  store.rs  stream.rs  test.rs  thread.rs
crates/radicle/src/git/: canonical.rs  raw.rs
secular-cli/: Cargo.toml
secular-cli/src/: main.rs
secular-cli/src/commands/: audit.rs  backup.rs  completions.rs  convert.rs  deploy.rs  docs.rs  init.rs  mod.rs  monitor.rs  node.rs  optimize.rs  peer.rs  repo.rs  scan.rs  status.rs
secular-cli/src/utils/: colors.rs  mod.rs  platform.rs
secular-gui/src-tauri/: Cargo.toml  tauri.conf.json
secular-gui/src-tauri/icons/: icon.icns
secular-gui/src-tauri/src/: main.rs
(+256 files in other folders)
