[package]
name = "secular"
version = "0.1.0"
edition = "2021"
authors = ["Secular Contributors"]
description = "Secure & cost-optimized P2P code collaboration CLI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YOUR_USERNAME/secular"

[[bin]]
name = "secular"
path = "src/main.rs"

[[bin]]
name = "sec"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"

# Radicle integration
radicle = { path = "../crates/radicle" }
radicle-crypto = { path = "../crates/radicle-crypto" }
radicle-node = { path = "../crates/radicle-node" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Terminal UI
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File operations
walkdir = "2"
ignore = "0.4"

# Git operations
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# Process management
which = "6.0"

# Date/time
chrono = "0.4"

# Directories
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.0"
predicates = "3.1"
