[package]
name = "radicle-cli"
description = "Radicle CLI"
homepage.workspace = true
license.workspace = true
version = "0.17.0"
authors = ["cloudhead <cloudhead@radicle.xyz>"]
edition.workspace = true
build = "build.rs"
rust-version.workspace = true

[[bin]]
name = "rad"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { workspace = true, features = ["clock", "std"] }
clap = { version = "4.5.44", features = ["derive"] }
dunce = { workspace = true }
human-panic.workspace = true
itertools.workspace = true
localtime = { workspace = true }
log = { workspace = true, features = ["std"] }
nonempty = { workspace = true }
radicle = { workspace = true, features = ["logger", "schemars"] }
radicle-cob = { workspace = true }
radicle-crypto = { workspace = true }
radicle-git-ref-format = { workspace = true, features = ["macro"] }
radicle-surf = { workspace = true }
radicle-term = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
timeago = { version = "0.4.2", default-features = false }
tree-sitter = "0.24.4"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.23.2"
tree-sitter-css = "0.23.1"
tree-sitter-go = "0.23.4"
tree-sitter-highlight = "0.24.4"
tree-sitter-html = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-md = "0.3.2"
tree-sitter-python = "0.23.4"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.23.2"
tree-sitter-toml-ng = "0.6.0"
tree-sitter-typescript = "0.23.2"
zeroize = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
radicle = { workspace = true, features = ["test"] }
radicle-cli-test = { workspace = true }
radicle-node = { workspace = true, features = ["test"] }

[lints]
workspace = true
