[package]
name = "radicle-cob"
description = "Radicle Collaborative Objects library"
homepage.workspace = true
repository.workspace = true
version = "0.17.0"
authors = [
  "Alex Good <alex@memoryandthought.me>",
  "Fintan Halpenny <fintan.halpenny@gmail.com>",
]
edition.workspace = true
license.workspace = true
keywords = ["radicle", "cob", "cobs"]
rust-version.workspace = true

[features]
default = []
# Only used for testing. Ensures that commit ids are stable.
stable-commit-ids = []
test = []

[dependencies]
fastrand = { workspace = true }
git-ref-format-core = { workspace = true }
git2 = { workspace = true, optional = true }
log = { workspace = true }
nonempty = { workspace = true, features = ["serialize"] }
radicle-crypto = { workspace = true, features = ["ssh"] }
radicle-dag = { workspace = true }
radicle-git-metadata = { workspace = true }
radicle-oid = { workspace = true, features = ["git2", "serde", "std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
signature = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
fastrand = { workspace = true }
qcheck = { workspace = true }
qcheck-macros = { workspace = true }
radicle-crypto = { workspace = true, features = ["test", "git-ref-format-core"] }
radicle-git-ref-format = { workspace = true, features = ["macro"] }
radicle-oid = { workspace = true, features = ["qcheck"] }
tempfile = { workspace = true }
