[package]
name = "radicle-git-metadata"
description = "Radicle structs that carry Git commit metadata"
homepage.workspace = true
repository.workspace = true
version = "0.1.0"
edition.workspace = true
license.workspace = true
keywords = ["radicle", "git", "metadata"]
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }