[package]
name = "radicle-oid"
description = "Radicle representation of Git object identifiers"
homepage.workspace = true
repository.workspace = true
version = "0.1.0"
edition.workspace = true
license.workspace = true
keywords = ["radicle", "git", "oid"]
rust-version.workspace = true

# For documentation of features refer to the module documentation in `./lib.rs`
[features]
default = ["sha1", "std"]
gix = ["dep:gix-hash"]
std = []
sha1 = []

[dependencies]
git2 = { workspace = true, optional = true, default-features = false }
gix-hash = { workspace = true, optional = true }
qcheck = { workspace = true, optional = true, default-features = false }
radicle-git-ref-format = { workspace = true, optional = true, default-features = false }
schemars = { workspace = true, optional = true, default-features = false }
serde = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
git2 = { workspace = true }
gix-hash = { workspace = true }
qcheck = { workspace = true }
qcheck-macros = { workspace = true }