[package]
name = "radicle-systemd"
description = "Radicle integration with Systemd"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version = "0.11.0"
rust-version.workspace = true

[dependencies]
log = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
systemd-journal-logger = { version = "2.2.2", optional = true }

[features]
default = ["journal", "listen"]
journal = ["dep:log", "dep:systemd-journal-logger"]
listen = []