[package]
name = "secular-gui"
version = "0.1.0"
description = "Elite desktop GUI for Secular"
authors = ["Secular Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# Integration with secular
radicle = { path = "../../crates/radicle" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
